--- a/ingreso.html
+++ b/ingreso.html
@@ -7,7 +7,59 @@
 <tittle>usuario</tittle>
 </head>
 <body>
+		<body class="is-preload">
 
+				<!-- Wrapper -->
+					<div id="wrapper">
+		
+						<!-- Header con logo-->
+							<header id="header">
+								<div class="logo">
+									<span class="icon fa-diamond"></span>
+								</div>
+								<div class="content">
+									<div class="inner">
+										<h1>Usuario de entrada</h1>
+										<p>Registro de usuario de entrada en relación con la persona a quien visita</p>
+									</div>
+								</div>
+								<nav>
+									<ul>
+										<li><a href="#intro">Intro</a></li>
+										<li><a href="#entrada">Registro de entrada</a></li>
+										<li><a href="#visitantes">Visitantes</a></li>
+										<li><a href="#bitacora">Bitácora</a></li>
+										<li><a href="#administracion">Administración</a></li>
+									</ul>
+								</nav>
+							</header>
+		
+						
+		
+								<!-- informacion de Contacto -->
+									<article id="contact">
+										<h2 class="major">Formulario de Visitante</h2>
+										<form method="post" action="#">
+											<div class="fields">
+												<div class="field half">
+													<label for="name">Ingresa tu nombre</label>
+													<input type="text" name="name" id="name" />
+												</div>
+												<div class="field half">
+													<label for="email">Ingresa tu Correo Electronico</label>
+													<input type="text" name="email" id="email" />
+												</div>
+												<div class="field">
+													<label for="visit">¿A quien vistas?</label>
+													<input type="text" name="visit" id="visit" />
+												</div>
+											</div>
+											<ul class="actions">
+												<li><input type="submit" value="Validar Datos" class="primary" /></li>
+												<li><input type="reset" value="Limpiar" /></li>
+											</ul>
+										</form>
+									</article>
 
 </body>
 
