se actualizo readme

--- a/ingreso.html
+++ b/ingreso.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="style.css" />
-<tittle>usuario</tittle>
+
 </head>
 <body>
 		<body class="is-preload">
@@ -15,7 +15,7 @@
 						<!-- Header con logo-->
 							<header id="header">
 								<div class="logo">
-									<span class="icon fa-diamond"></span>
+									<img src = "https://scontent.fgdl2-1.fna.fbcdn.net/v/t1.15752-9/57272158_430232617738390_6845863791750545408_n.jpg?_nc_cat=103&_nc_ht=scontent.fgdl2-1.fna&oh=feb2a90320c36d1a92ca6283666451b1&oe=5D3A75D4">
 								</div>
 								<div class="content">
 									<div class="inner">
@@ -62,6 +62,7 @@
 									</article>
 
 </body>
+<script src="templates/main.js"></script>
 
 
 </html>
