--- a/src/pantallas/index.html
+++ b/src/pantallas/index.html
@@ -24,7 +24,7 @@
         
         <img src="https://scontent-qro1-1.xx.fbcdn.net/v/t1.15752-9/57272158_430232617738390_6845863791750545408_n.jpg?_nc_cat=103&_nc_ht=scontent-qro1-1.xx&oh=574d4b17513c3daac10b8371c7a39df3&oe=5D3A75D4">
 		
-		<button><a href="../pantallas/administracion.html">Administración</a></button>
+		<button><a href="../pantallas/administracion.html">Administrador</a></button>
 
 		<p>¿Estás de visita? <br></p>
        <button><a href="../pantallas/ingreso.html" >Registro de Entrada</a></button> 
