se agrego menu de visitnte, tabla con datos en tiempo real y activacion de camara

--- a/src/pantallas/index.html
+++ b/src/pantallas/index.html
@@ -24,10 +24,10 @@
         
         <img src="https://scontent-qro1-1.xx.fbcdn.net/v/t1.15752-9/57272158_430232617738390_6845863791750545408_n.jpg?_nc_cat=103&_nc_ht=scontent-qro1-1.xx&oh=574d4b17513c3daac10b8371c7a39df3&oe=5D3A75D4">
 		
-		<button><a href="../pantallas/administracion.html">Administrador</a></button>
+		<button><a href="../pantallas/administracion.html" title="¿Eres Administrador?">Administrador</a></button>
 
 		<p>¿Estás de visita? <br></p>
-       <button><a href="../pantallas/ingreso.html" >Registro de Entrada</a></button> 
+       <button><a href="../pantallas/ingreso.html" title="Click para registrar tu visita">Registro de Entrada</a></button> 
 
 
 <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
