--- a/src/pantallas/administracion.html
+++ b/src/pantallas/administracion.html
@@ -29,16 +29,17 @@
 
 		<button onclick="ingreso()">enviar</button>
 		
-		<div id = "contenido"> ` 
+		<div id = "contenido">  
                 <table class = "table">
                         <thead>
                         <tr>
-                            <th scope="col">Clave de acceso</th>
+                            <th scope="col">Id</th>
                         <th scope="col"> Nombre </th>
                         <th scope="col"> Apellido </th>
                         <th scope="col"> Fecha </th>
                         <th scope="col"> Email </th>
                         <th scope="col"> Motivo de visita </th>
+                        <th scope="col">Eliminar</th>
                         </tr>
                         </thead>
                         
@@ -54,7 +55,7 @@
                                 </tr>
                                 </tbody>
                               </table>
-                              </div>` 
+                              </div>
     </div>
     
    
