se agrego responsive funcional en todo el proyecto

--- a/src/pantallas/index.html
+++ b/src/pantallas/index.html
@@ -10,16 +10,22 @@
 	
 </head>
 
+
+
+
 <body>
     <header id="header">
 		<nav>
 			<ul>
+				<div class = "topnav" id="myTopnav">
 				<li><a class="active" href="../pantallas/index.html"> 🏠 </a></li>
 				<li><a href="../pantallas/ingreso.html">Registro de entrada</a></li>
 				<li><a href="../pantallas/administracion.html">Administración</a></li>
+				<a href="javascript:void(0);" class="icon" onclick="mymenu()"></a>
 			</ul>
 		</nav>
-        </header>
+		</header>
+	</div>
         <h1> Gurú Keys tu sitio de control de visitas y accesos   </h1>
         
         <img src="https://scontent-qro1-1.xx.fbcdn.net/v/t1.15752-9/57272158_430232617738390_6845863791750545408_n.jpg?_nc_cat=103&_nc_ht=scontent-qro1-1.xx&oh=574d4b17513c3daac10b8371c7a39df3&oe=5D3A75D4">
