--- a/src/pantallas/index.html
+++ b/src/pantallas/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
-		<script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-		<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
-        <meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../style.css" />
-		
-	
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="../style.css" />
+
+
 </head>
 
 
@@ -15,29 +16,29 @@
 
 <body>
     <header id="header">
-		<nav>
-			<ul>
-				<div class = "topnav" id="myTopnav">
-				<li><a class="active" href="../pantallas/index.html"> 🏠 </a></li>
-				<li><a href="../pantallas/ingreso.html">Registro de entrada</a></li>
-				<li><a href="../pantallas/administracion.html">Administración</a></li>
-				<a href="javascript:void(0);" class="icon" onclick="mymenu()"></a>
-			</ul>
-		</nav>
-		</header>
-	</div>
-        <h1> Gurú Keys tu sitio de control de visitas y accesos   </h1>
-        
-        <img src="https://scontent-qro1-1.xx.fbcdn.net/v/t1.15752-9/57272158_430232617738390_6845863791750545408_n.jpg?_nc_cat=103&_nc_ht=scontent-qro1-1.xx&oh=574d4b17513c3daac10b8371c7a39df3&oe=5D3A75D4">
-		
-		<button><a href="../pantallas/administracion.html" title="¿Eres Administrador?">Administrador</a></button>
+        <nav>
+            <ul>
+                <div class="topnav" id="myTopnav">
+                    <li><a class="active" href="../pantallas/index.html"> 🏠 </a></li>
+                    <li><a href="../pantallas/ingreso.html">Registro de entrada</a></li>
+                    <li><a href="../pantallas/administracion.html">Administración</a></li>
+                    <a href="javascript:void(0);" onclick="mymenu()"></a>
+            </ul>
+        </nav>
+    </header>
+    </div>
+    <h1> Gurú Keys tu sitio de control de visitas y accesos </h1>
 
-		<p>¿Estás de visita? <br></p>
-       <button><a href="../pantallas/ingreso.html" title="Click para registrar tu visita">Registro de Entrada</a></button> 
+    <img src="https://scontent-qro1-1.xx.fbcdn.net/v/t1.15752-9/57272158_430232617738390_6845863791750545408_n.jpg?_nc_cat=103&_nc_ht=scontent-qro1-1.xx&oh=574d4b17513c3daac10b8371c7a39df3&oe=5D3A75D4">
+
+    <button><a href="../pantallas/administracion.html" title="¿Eres Administrador?">Administrador</a></button>
+    <h3>¿Estás de visita?</h3>
+    <button><a href="../pantallas/ingreso.html" title="Click para registrar tu visita">Registro de Entrada</a></button>
 
 
-<script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
-<script src = "../JS/app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
+    <script src="../JS/app.js"></script>
 
 </body>
+
 </html>
