se arreglaron errores en js

--- a/src/pantallas/administracion.html
+++ b/src/pantallas/administracion.html
@@ -30,8 +30,9 @@
 
     <input type="email" id="email" placeholder="ingresa tu email 📧 " />
     <input type="password" id="contraseña" placeholder="ingresa tu contraseña 🔒 " />
-    <h4>Olvidaste tu contraseña? <href="../pantallas/ingreso.html">a </href> </h4> <button onclick="ingreso()" placeholder="Iniciar sesión como Administrador">Iniciar sesión</button>
-            <button onclick="registrar()" title="¿Aún no tienes una cuenta?">Registrar</button>
+    <button onclick="ingreso()" placeholder="Iniciar sesión como Administrador">Iniciar sesión</button>
+    <br><h3>¿Aún no tienes cuenta?</h3>
+            <button onclick="registrar()" title="¿Aún no tienes una cuenta?">Unirme</button>
             <div id="contenido">
                 <table class="table">
                     <thead>
