--- a/src/pantallas/ingreso.html
+++ b/src/pantallas/ingreso.html
@@ -34,9 +34,10 @@
 												<input type = "password" id = "contraseña" placeholder="ingresa tu contraseña"/>
 
 												-->
-    <!--se agrego nuevo metodo de guardar datos del visitante-->
+	<!--se agrego nuevo metodo de guardar datos del visitante-->
+	<h2> Bienvenidx a Gurú Keys</h2>
     <div class="container">
-        <h1> Agregar usuarios</h1>
+		
         <input type="text" id="nombre" placeholder="Tu nombre va acá">
         <input type="text" id="apellido" placeholder="Y tu Apellido es...?">
         <input type="text" id="email" placeholder="ejemplo@blabla.com">
@@ -56,13 +57,13 @@
         <p id="demo"></p>
     </div>
 
-    <button onclick="guardar()" title="Almacenar en Database">Guardar</button>
-
+    <button onclick="guardar()" title="Almacenar en Database">Registrarme</button>
+    <br><button onclick="takepicture" >Tomar foto 😀 </button>
 
 
     <video id="player" controls autoplay></video>
-    <button onclick="takepicture">Tomar foto</button>
-    <canvas id="snapshot" width=320 height=240></canvas>
+    
+    <canvas id="snapshot" width=120 height=140></canvas>
 
 
 
