se cambiaron los px por em

--- a/src/pantallas/administracion.html
+++ b/src/pantallas/administracion.html
@@ -28,11 +28,11 @@
     </header>
 
 
-    <input type="email" id="email" placeholder="ingresa tu email 📧 " />
-    <input type="password" id="contraseña" placeholder="ingresa tu contraseña 🔒 " />
+    <input type="email" id="email" placeholder="Ingresa tu email 📧 " />
+    <input type="password" id="contraseña" placeholder="Ingresa tu contraseña 🔒 " />
     <button onclick="ingreso()" placeholder="Iniciar sesión como Administrador">Iniciar sesión</button>
     <br><h3>¿Aún no tienes cuenta?</h3>
-            <button onclick="registrar()" title="¿Aún no tienes una cuenta?">Unirme</button>
+            <button onclick="registrar()" title="¿Aún no tienes una cuenta?">Unirme</button><br>
             <div id="contenido">
                 <table class="table">
                     <thead>
