se agrego tiempo estimado de visita

--- a/src/pantallas/ingreso.html
+++ b/src/pantallas/ingreso.html
@@ -41,7 +41,8 @@
         <input type="text" id="nombre" placeholder="Tu nombre va acá">
         <input type="text" id="apellido" placeholder="Y tu Apellido es...?">
         <input type="text" id="email" placeholder="ejemplo@blabla.com">
-        <input type="text" id="fecha" placeholder="¿Que día es hoy?">
+		<input type="text" id="fecha" placeholder="¿Que día es hoy?">
+		<input type="text" id="tiempo" placeholder="Tiempo estimado de visita">
 
         <!--<input type="text" id = "motivo" placeholder="¿A quien visitas?">-->
 
