--- a/src/pantallas/administracion.html
+++ b/src/pantallas/administracion.html
@@ -43,6 +43,7 @@
                             <th scope="col"> Fecha </th>
                             <th scope="col"> Email </th>
                             <th scope="col"> Motivo de visita </th>
+                            <th scope="col"> Tiempo estimado de visita</th>
                             <th scope="col">Eliminar</th>
                         </tr>
                     </thead>
