Se indento codigo a 4 espacios, se actualizo la funcionalidad de la camara y lienzos

--- a/src/pantallas/index.html
+++ b/src/pantallas/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-	<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="../style.css" />
@@ -31,12 +31,15 @@
 
     <img src="https://scontent-qro1-1.xx.fbcdn.net/v/t1.15752-9/57272158_430232617738390_6845863791750545408_n.jpg?_nc_cat=103&_nc_ht=scontent-qro1-1.xx&oh=574d4b17513c3daac10b8371c7a39df3&oe=5D3A75D4">
 
-    <br>
-    <br><h3>¿Estás de visita?</h3><br>
-    <button><a href="../pantallas/ingreso.html" title="Click para registrar tu visita">Registro de Entrada</a></button>
-    <br><h3> ó </h3><br>
-	<button><a href="../pantallas/administracion.html" title="¿Eres Administrador?">Soy Administrador</a></button>
-
+    <section id="eleccionentrada">
+        <br>
+        <br>
+        <h3>¿Estás de visita?</h3><br>
+        <button><a href="../pantallas/ingreso.html" title="Click para registrar tu visita">Registro de Entrada</a></button>
+        <br>
+        <h3> ó </h3><br>
+        <button><a href="../pantallas/administracion.html" title="¿Eres Administrador?">Soy Administrador</a></button>
+    </section>
     <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
     <script src="../JS/app.js"></script>
 
