--- a/src/pantallas/index.html
+++ b/src/pantallas/index.html
@@ -21,6 +21,7 @@
                 <div class="topnav" id="myTopnav">
                     <li><a class="active" href="../pantallas/index.html"> 🏠 </a></li>
                     <li><a href="../pantallas/ingreso.html">Registro de entrada</a></li>
+                    <li><a href="../pantallas/usuariocw.html">Usuario CW</a></li>
                     <li><a href="../pantallas/administracion.html">Administrador</a></li></span>
                     <a href="javascript:void(0);" onclick="mymenu()"></a>
             </ul>
