--- a/src/pantallas/ingreso.html
+++ b/src/pantallas/ingreso.html
@@ -18,6 +18,7 @@
                 <div class="topnav" id="myTopnav">
                     <li><a class="active" href="../pantallas/index.html"> 🏠 </a></li>
                     <li><a href="../pantallas/ingreso.html">Registro de entrada</a></li>
+                    <li><a href="../pantallas/usuariocw.html">Usuario CW</a></li>
                     <li><a href="../pantallas/administracion.html">Administración</a></li>
                     <a href="javascript:void(0);" class="icon" onclick="mymenu()"></a>
             </ul>
@@ -28,12 +29,12 @@
     <h2> Bienvenidx a Gurú Keys</h2>
     <section class="container">
 
-        <input type="text" id="nombre" placeholder="Tu nombre va acá">
+        <input type="text" id="nombre" placeholder="Tu nombre va acá" autofocus="autofocus">
         <input type="text" id="apellido" placeholder="Y tu Apellido es...?">
-        <input type="text" id="email" placeholder="ejemplo@blabla.com">
-        <input type="text" id="fecha" placeholder="¿Que día es hoy?">
+        <input type="text" id="email" placeholder="ejemplo@blabla.com" required="required">
+        <input type="date" id="fecha">
         <input type="text" id="tiempo" placeholder="Tiempo estimado de visita">
-
+      
         <canvas id="snapshot"></canvas>
 
         <form>
@@ -57,6 +58,7 @@
     <button id="whisky" title="Foto de registro"> Tomar Foto 😬 </button>
 
     <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"></script>
     <script src="../JS/app.js"> </script>
     <script src="../JS/administrador.js"></script>
 
