--- a/src/pantallas/administracion.html
+++ b/src/pantallas/administracion.html
@@ -38,7 +38,7 @@
     <button onclick="ingreso()" placeholder="Iniciar sesión como Administrador">Iniciar sesión</button>
     <br><h3>¿Aún no tienes cuenta?</h3>
             <button onclick="registrar()" title="¿Aún no tienes una cuenta?">Unirme</button><br>
-            <div id="contenido">
+            <section id="contenido">
                 <table class="table">
                     <thead>
                         <tr>
@@ -54,8 +54,9 @@
                         </tr>
                     </thead>
                     <tbody id="tabla">
-            </div>
-            </div>
+                        </table>
+                    </section>
+           
 
 
 
