se agrego script a indexcoworker

--- a/src/pantallas/indexcoworker.html
+++ b/src/pantallas/indexcoworker.html
@@ -69,6 +69,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
     <script src="../JS/notificacion.js"></script>
     <script src="../JS/coworker.js"></script>
+    <script src="../JS/app.js"></script>
 
 </body>
 
